# Churn-ML_ap

./: .gitignore  LICENSE  README-EN.md  README-PT.md  README.md  predictions.csv  pyproject.toml
.github/workflows/: ci.yml
data/: sample_churn.csv
notebooks/: EDA.ipynb
src/churn_ml/: __init__.py  api.py  cli.py  config.py  data.py  features.py  model.py
tests/: test_basic.py
