[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-ml"
version = "0.1.0"
description = "Customer Churn ML project with CLI and modular code"
authors = [{name = "Seu Nome", email = "email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "typer>=0.12",
  "rich>=13.0",
  "joblib>=1.3",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "ruff>=0.6",
  "jupyter>=1.0",
]
nb = [
  "seaborn>=0.13",
  "matplotlib>=3.8",
  "optuna>=3.5",
  "shap>=0.46",
  "imbalanced-learn>=0.12",
  "pandera>=0.18",
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "pydantic>=2.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
churn = "churn_ml.cli:app"
churn-api = "churn_ml.api:create_app"

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks/*.ipynb", "notebooks/EDA.ipynb"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

